Fix named datasource handling for dev-services
Because of how the Quarkus Runtime Config objects are populated
for map fields (like the named datasources), it so happened
that when a user configured a jdbc property for a named datasource,
the DevServices provided URL for that datasource was not ending
up in DataSourceJdbcRuntimeConfig.

Fixes: #21387